2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Use WARN_CFLAGS instead of -Wall.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/devilspie.c:
	Re-arrange defines, rename LOCALEDIR.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/devilspie.c:
	Don't start if no configuration was loaded.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/doc-generator.c:
	Cast strings to xmlChar*.

2005-09-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/config-parser.c:
	* src/devilspie.c:
	Use GOption rather than popt.

2005-09-24  Ross Burton  <ross@burtonini.com>

	* src/config-parser.c:
	* src/config-parser.h:
	* src/devilspie-action-debug.gob:
	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-exec.gob:
	* src/devilspie-action-hide.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-action-opacity.gob:
	* src/devilspie-action-resize.gob:
	* src/devilspie-action-savegeometry.gob:
	* src/devilspie-action-setgeometry.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-action-setworkspace.gob:
	* src/devilspie-action-shade.gob:
	* src/devilspie-matcher-windowname.gob:
	* src/devilspie.c:
	* src/devilspie.h:
	* src/parser-test.c:
	Remove devilspie.h.

2005-09-24  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/devilspie-action-debug.gob:
	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-exec.gob:
	* src/devilspie-action-hide.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-action-opacity.gob:
	* src/devilspie-action-resize.gob:
	* src/devilspie-action-savegeometry.gob:
	* src/devilspie-action-setgeometry.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-action-setworkspace.gob:
	* src/devilspie-action-shade.gob:
	* src/devilspie-action.gob:
	* src/devilspie-matcher-always.gob:
	* src/devilspie-matcher-windowname.gob:
	* src/devilspie-matcher.gob:
	* src/devilspie.c:
	* src/devilspie.h:
	* src/flurb.c:
	* src/flurb.h:
	* src/xutils.c: